2011-04-29 Arnulf P. Wiedemann <wiede@users.sf.net>
	* configure, configure.in, generic/itk.h: Bump version to 4.0b6

2010-08-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in, generic/itk.h: Bump version to 4.0b5
	* tclconfig/tcl.m4: full update to TEA 3.9

2007-09-08 Arnulf P. Wiedemann <wiede@users.sf.net>
    * all new modules installed and added
This is the ChangeLog file for itcl-ng/itk
it is here as Itk and itcl-ng/itk will be different modules in the future
